# osc-debug

./: CONTRIBUTING.rst  README.rst  setup.cfg
doc/source/: index.rst  installation.rst  usage.rst
oscdebug/: plugin.py
oscdebug/tests/: base.py  fakes.py  test_oscdebug.py
oscdebug/tests/v1/: test_api.py  test_auth.py  test_plugin.py
oscdebug/v1/: api.py  auth.py  plugin.py
