[metadata]
name = osc-debug
summary = OSC Debug Plugin
description-file =
    README.rst
author = Dean Troyer
author-email = dtroyer@gmail.com
home-page = 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    oscdebug

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[compile_catalog]
directory = oscdebug/locale
domain = osc-oscdebug

[update_catalog]
domain = osc-oscdebug
output_dir = oscdebug/locale
input_file = oscdebug/locale/osc-debug.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oscdebug/locale/osc-debug.pot

[entry_points]
openstack.cli.extension =
    oscdebug = oscdebug.plugin

openstack.oscdebug.v1 =
    plugin_list = oscdebug.v1.plugin:ListPlugin
    plugin_show = oscdebug.v1.plugin:ShowPlugin
